--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "@types/chrome": "0.0.86",
     "css-loader": "3.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.3",
     "typescript": "3.5.2",
