chore: Install ESLint

--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "homepage": "https://github.com/ganta/chrome-extension-marktone#readme",
   "devDependencies": {
     "@types/chrome": "0.0.86",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "css-loader": "3.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.18.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
