--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": ["airbnb-base", "plugin:@typescript-eslint/recommended"]
+  "extends": ["airbnb-base", "plugin:@typescript-eslint/recommended"],
+  "globals": {
+    "document": true
+  }
 }
