--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "typescript": "3.5.2",
     "webpack": "4.34.0",
     "webpack-cli": "3.3.4"
+  },
+  "dependencies": {
+    "marked": "^0.7.0"
   }
 }
