--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "css-loader": "3.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
@@ -36,6 +38,10 @@
   },
   "dependencies": {
     "@types/marked": "^0.6.5",
-    "marked": "^0.7.0"
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "marked": "^0.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
