--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2015",
     "module": "commonjs",
+    "jsx": "react",
     "strict": true
   },
   "exclude": [
