--- a/.eslintrc
+++ b/.eslintrc
@@ -20,5 +20,8 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "react/jsx-indent" : ["error", 4],
     "react/jsx-filename-extension": "off"
+  },
+  "settings": {
+    "import/resolver": "webpack"
   }
 }
