--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
