--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "globals": {
-    "document": true
+    "document": true,
+    "MutationObserver": true
   },
   "parserOptions": {
     "ecmaFeatures": {
