feat: Implement the mention feature using kintone directory search API

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
   ],
   "globals": {
     "document": true,
-    "MutationObserver": true
+    "MutationObserver": true,
+    "fetch": true
   },
   "parserOptions": {
     "ecmaFeatures": {
