--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "react/jsx-indent" : ["error", 4],
     "react/jsx-indent-props" : ["error", 4],
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "max-len": ["error", 120]
   },
   "settings": {
     "import/resolver": "webpack"
