--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
     "react/jsx-indent" : ["error", 4],
     "react/jsx-indent-props" : ["error", 4],
     "react/jsx-filename-extension": "off",
-    "max-len": ["error", 120]
+    "max-len": "off",
+    "arrow-body-style": "off"
   },
   "settings": {
     "import/resolver": "webpack"
