--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "airbnb",
     "plugin:@typescript-eslint/recommended"
   ],
+  "env": {
+    "webextensions": true
+  },
   "globals": {
     "document": true,
     "window": true,
