style: Use @cybozu/eslint-config/presets/react-typescript-prettier instead of airbnb

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
   "extends": [
-    "airbnb",
-    "plugin:@typescript-eslint/recommended"
+    "@cybozu/eslint-config/presets/react-typescript-prettier"
   ],
   "env": {
     "webextensions": true
@@ -21,16 +17,10 @@
       "jsx": true
     }
   },
-  "rules": {
-    "@typescript-eslint/explicit-member-accessibility": 0,
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "react/jsx-indent" : ["error", 4],
-    "react/jsx-indent-props" : ["error", 4],
-    "react/jsx-filename-extension": "off",
-    "max-len": "off",
-    "arrow-body-style": "off"
-  },
   "settings": {
-    "import/resolver": "webpack"
+    "import/resolver": "webpack",
+    "react": {
+      "version": "detect"
+    }
   }
 }
