--- a/package.json
+++ b/package.json
@@ -17,17 +17,13 @@
   },
   "homepage": "https://github.com/ganta/chrome-extension-marktone#readme",
   "devDependencies": {
+    "@cybozu/eslint-config": "^6.0.2",
     "@types/chrome": "0.0.86",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "css-loader": "3.0.0",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.1",
+    "eslint": "^5.16.0",
     "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
