--- a/package.json
+++ b/package.json
@@ -17,30 +17,31 @@
   },
   "homepage": "https://github.com/ganta/chrome-extension-marktone#readme",
   "devDependencies": {
-    "@cybozu/eslint-config": "^6.0.2",
-    "@types/chrome": "0.0.86",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
-    "css-loader": "3.0.0",
-    "eslint": "^5.16.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
+    "@cybozu/eslint-config": "5.2.0",
+    "@types/chrome": "0.0.88",
+    "@typescript-eslint/eslint-plugin": "1.13.0",
+    "@typescript-eslint/parser": "1.13.0",
+    "css-loader": "3.2.0",
+    "eslint": "5.16.0",
+    "eslint-import-resolver-webpack": "0.11.1",
+    "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "4.12.0",
+    "prettier": "^1.18.2",
+    "sass-loader": "7.2.0",
     "style-loader": "0.23.1",
-    "ts-loader": "6.0.3",
-    "typescript": "3.5.2",
-    "webpack": "4.34.0",
-    "webpack-cli": "3.3.4"
+    "ts-loader": "6.0.4",
+    "typescript": "3.5.3",
+    "webpack": "4.39.2",
+    "webpack-cli": "3.3.7"
   },
   "dependencies": {
-    "@types/marked": "^0.6.5",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/webscopeio__react-textarea-autocomplete": "^2.3.0",
-    "@webscopeio/react-textarea-autocomplete": "^4.6.1",
-    "marked": "^0.7.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@types/marked": "0.6.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/webscopeio__react-textarea-autocomplete": "2.3.0",
+    "@webscopeio/react-textarea-autocomplete": "4.6.1",
+    "marked": "0.7.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
   }
 }
