--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Change a Rich Text input area to Markdown input area on kintone",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --ext .ts,.tsx src && prettier --check 'src/**/*.{ts,tsx,scss}'",
+    "lint:fix": "eslint --ext .ts,.tsx --fix src && prettier --write 'src/**/*.{ts,tsx,scss}'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
