--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "css-loader": "3.2.0",
     "eslint": "6.3.0",
     "eslint-import-resolver-webpack": "0.11.1",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-react-hooks": "2.0.1",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.12.0",
     "prettier": "^1.18.2",
