--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-react-hooks": "2.0.1",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.12.0",
-    "prettier": "^1.18.2",
+    "prettier": "1.18.2",
     "sass-loader": "7.2.0",
     "style-loader": "0.23.1",
     "ts-loader": "6.1.0",
