--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/react-dom": "16.9.0",
     "@types/webscopeio__react-textarea-autocomplete": "2.3.0",
     "@webscopeio/react-textarea-autocomplete": "4.6.1",
-    "dompurify": "1.0.11",
+    "dompurify": "^2.0.3",
     "marked": "0.7.0",
     "react": "16.9.0",
     "react-dom": "16.9.0"
