--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/chrome": "0.0.88",
     "@typescript-eslint/eslint-plugin": "2.2.0",
     "@typescript-eslint/parser": "2.2.0",
+    "copy-webpack-plugin": "5.0.5",
     "css-loader": "3.2.0",
     "eslint": "6.3.0",
     "eslint-import-resolver-webpack": "0.11.1",
