--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack --watch",
     "build": "webpack",
     "clean": "rm -rf ./dist",
+    "pack": "npm run clean && npm run build && (cd dist && zip -r ../marktone.zip .)",
     "eslint": "eslint --ext .ts,.tsx src",
     "prettier": "prettier --check 'src/**/*.{ts,tsx,scss}'",
     "lint": "npm run eslint && npm run prettier",
