--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "Marktone",
   "version": "1.0.6",
   "manifest_version": 2,
-  "description": "Change a Rich Text input area to Markdown input area on kintone",
+  "description": "Change a Rich Text input area on kintone https://kintone.cybozu.co.jp/ to the Markdown input area.",
   "homepage_url": "https://github.com/ganta/chrome-extension-marktone",
   "icons": {
     "16": "icons/icon16.png",
