--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "page_action": {
+  "browser_action": {
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
@@ -19,8 +19,7 @@
   },
   "permissions": [
     "declarativeContent",
-    "tabs",
-    "activeTab",
+    "storage",
     "https://*.cybozu.com/k/*",
     "https://*.cybozu-dev.com/k/*",
     "https://*.kintone.com/k/*",
