--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@types/chrome": "0.0.91",
     "@typescript-eslint/eslint-plugin": "2.9.0",
     "@typescript-eslint/parser": "2.9.0",
+    "chrome-manifest-loader": "0.2.0",
     "copy-webpack-plugin": "5.0.5",
     "css-loader": "3.2.0",
     "eslint": "6.7.2",
     "eslint-import-resolver-webpack": "0.11.1",
     "eslint-plugin-react-hooks": "2.3.0",
+    "extract-loader": "3.1.0",
+    "file-loader": "5.0.2",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.13.1",
     "prettier": "1.19.1",
