--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/react-dom": "16.9.4",
     "@types/webscopeio__react-textarea-autocomplete": "2.3.1",
     "@webscopeio/react-textarea-autocomplete": "4.6.1",
-    "dompurify": "^2.0.7",
+    "dompurify": "2.0.8",
     "marked": "0.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
