chore: Add the label to Pull Request from Renovate

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:base"
   ],
+  "labels": ["renovate"],
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
