chore: Patch version changes are automatically merged

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,9 @@
     "config:base"
   ],
   "labels": ["renovate"],
+  "patch": {
+    "automerge": true
+  },
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
