feat: Enabled syntax highlight to a code block

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/webscopeio__react-textarea-autocomplete": "4.6.1",
     "@webscopeio/react-textarea-autocomplete": "4.6.3",
     "dompurify": "2.0.12",
+    "highlight.js": "10.1.1",
     "marked": "1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
