chore: Disable the installation of optional packages

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
+# Configure with an exact version rather than using npm’s default semver range operator.
 save-exact=true
+
+# Disable the installation of optional packages.
+optional=false
