chore: Auto-merge Orbs with Renovate

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,10 @@
     {
       "depTypeList": ["devDependencies"],
       "automerge": true
+    },
+    {
+      "managers": ["orb"],
+      "automerge": true
     }
   ]
 }
