chore: Change the ESLint rule for no-shadow

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,8 @@
       {
         "allow": ["warn", "error"]
       }
-    ]
+    ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error"
   }
 }
