--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "Marktone",
   "manifest_version": 2,
   "description": "Change a Rich Text input area on kintone https://kintone.cybozu.co.jp/ to the Markdown input area.",
-  "homepage_url": "https://github.com/ganta/chrome-extension-marktone",
+  "homepage_url": "https://github.com/ganta/marktone",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
