--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Change a Rich Text input area to Markdown input area on kintone",
   "scripts": {
     "start": "webpack --watch",
+    "clean": "rimraf 'dist/*' '*.zip'",
     "build": "webpack",
-    "clean": "rm -rf ./dist",
-    "pack": "npm run clean && npm run build && (cd dist && zip -r ../marktone.zip .)",
-    "eslint": "eslint --ext .ts,.tsx src",
+    "check-types": "tsc --noEmit",
+    "eslint": "eslint 'src/**/*.{ts,tsx}'",
+    "eslint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --check 'src/**/*.{ts,tsx,scss}'",
-    "lint": "npm run eslint && npm run prettier",
-    "lint:fix": "npm run eslint -- --fix src && npm run prettier -- --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier:fix": "prettier --write 'src/**/*.{ts,tsx,scss}'",
+    "lint": "run-p eslint prettier",
+    "lint:fix": "run-s eslint:fix prettier:fix",
+    "prepackage": "run-s clean build",
+    "package": "cd dist && zip -r ../marktone.zip ."
   },
   "repository": {
     "type": "git",
@@ -51,6 +54,7 @@
     "file-loader": "6.2.0",
     "mini-css-extract-plugin": "1.3.8",
     "node-sass": "5.0.0",
+    "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
