feat: Implement the feature to upload files from the clipboard

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,6 +18,7 @@
   },
   "permissions": [
     "storage",
+    "clipboardRead",
     "https://*.cybozu.com/k/*",
     "https://*.cybozu-dev.com/k/*",
     "https://*.kintone.com/k/*",
