--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "extract-loader": "5.1.0",
     "file-loader": "6.2.0",
     "mini-css-extract-plugin": "1.5.0",
-    "node-sass": "5.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
+    "sass": "1.32.11",
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
     "ts-loader": "9.1.1",
