--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,11 @@ on:
   push:
     branches:
       - main
+      - 'renovate/**'
 
   pull_request:
+    branches-ignore:
+      - 'renovate/**'
 
 jobs:
   npm-run:
