--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clean": "rimraf 'dist/*' '*.zip'",
     "build": "webpack",
     "check-types": "tsc --noEmit",
-    "eslint": "eslint 'src/**/*.{ts,tsx}'",
-    "eslint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix",
     "prettier": "prettier --check 'src/**/*.{ts,tsx,scss}'",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx,scss}'",
     "lint": "run-p eslint prettier",
@@ -25,7 +25,6 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@cybozu/eslint-config": "15.0.0",
     "@types/chrome": "0.0.163",
     "@types/dompurify": "2.3.1",
     "@types/marked": "2.0.5",
@@ -38,7 +37,9 @@
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.5.1",
     "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-webpack": "0.13.2",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-react-hooks": "4.3.0",
     "extract-loader": "5.1.0",
     "file-loader": "6.2.0",
