--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Marktone",
   "manifest_version": 2,
+  "version": "1.6.0",
   "description": "Change a Rich Text input area on kintone https://kintone.cybozu.co.jp/ to the Markdown input area.",
   "homepage_url": "https://github.com/ganta/marktone",
   "icons": {
