--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "run-p eslint prettier",
     "lint:fix": "run-s eslint:fix prettier:fix",
     "prepackage": "run-s clean build",
-    "package": "cd dist && zip -r ../marktone.zip ."
+    "package": "cd dist && zip -r ../marktone.zip .",
+    "test": "jest"
   },
   "dependencies": {
     "@webscopeio/react-textarea-autocomplete": "4.8.1",
@@ -24,8 +25,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.15.0",
+    "@testing-library/react": "12.1.2",
     "@types/chrome": "0.0.163",
     "@types/dompurify": "2.3.1",
+    "@types/jest": "27.0.2",
     "@types/marked": "2.0.5",
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
@@ -41,13 +45,16 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "extract-loader": "5.1.0",
     "file-loader": "6.2.0",
+    "jest": "27.3.1",
     "mini-css-extract-plugin": "2.4.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.4.1",
     "sass": "1.43.4",
     "sass-loader": "12.3.0",
     "style-loader": "3.3.1",
+    "ts-jest": "27.0.7",
     "ts-loader": "9.2.6",
+    "ts-node": "10.4.0",
     "typescript": "4.4.4",
     "webpack": "5.63.0",
     "webpack-cli": "4.9.1"
