chore: Setup Storybook

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -51,19 +51,20 @@ plugins:
 
 
 exclude_patterns:
-- "config/"
-- "db/"
-- "dist/"
-- "features/"
-- "**/node_modules/"
-- "script/"
-- "**/spec/"
-- "**/test/"
-- "**/tests/"
-- "Tests/"
-- "**/vendor/"
-- "**/*_test.go"
-- "**/*.d.ts"
-- "package.json"
-- "package-lock.json"
-- ".tool-versions"
+  - "config/"
+  - "db/"
+  - "dist/"
+  - "features/"
+  - "**/node_modules/"
+  - "script/"
+  - "**/spec/"
+  - "**/test/"
+  - "**/tests/"
+  - "Tests/"
+  - "**/vendor/"
+  - "**/*_test.go"
+  - "**/*.d.ts"
+  - "package.json"
+  - "package-lock.json"
+  - ".tool-versions"
+  - "src/stories"
