--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint:fix": "run-s eslint:fix prettier:fix",
     "prepackage": "run-s clean build",
     "package": "cd dist && zip -r ../marktone.zip .",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@webscopeio/react-textarea-autocomplete": "4.8.1",
@@ -25,6 +27,14 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "7.16.0",
+    "@storybook/addon-a11y": "6.3.12",
+    "@storybook/addon-actions": "6.3.12",
+    "@storybook/addon-essentials": "6.3.12",
+    "@storybook/addon-links": "6.3.12",
+    "@storybook/builder-webpack5": "6.3.12",
+    "@storybook/manager-webpack5": "6.3.12",
+    "@storybook/react": "6.3.12",
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@types/chrome": "0.0.163",
@@ -36,6 +46,7 @@
     "@types/webscopeio__react-textarea-autocomplete": "4.7.2",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
+    "babel-loader": "8.2.3",
     "copy-webpack-plugin": "9.1.0",
     "css-loader": "6.5.1",
     "eslint": "8.2.0",
