--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "highlight.js": "11.3.1",
     "marked": "2.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
@@ -43,6 +44,7 @@
     "@types/marked": "2.0.5",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
+    "@types/styled-components": "5.1.15",
     "@types/webscopeio__react-textarea-autocomplete": "4.7.2",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
