--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
     "marked": "4.0.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "5.3.3"
+    "rehype-highlight": "5.0.2",
+    "rehype-react": "7.0.4",
+    "rehype-sanitize": "5.0.1",
+    "remark-breaks": "3.0.2",
+    "remark-gfm": "3.0.1",
+    "remark-parse": "10.0.1",
+    "remark-rehype": "10.1.0",
+    "styled-components": "5.3.3",
+    "unified": "10.1.1",
+    "unist-util-visit": "4.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
