--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,7 @@
     "module": "commonjs",
     "jsx": "react",
     "strict": true,
-    "typeRoots": [
-      "./types", "node_modules/@types"
-    ],
     "esModuleInterop": true
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
