--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["storage", "clipboardRead"],
+  "permissions": ["storage"],
   "web_accessible_resources": [
     {
       "resources": ["js/initialization.js"],
