--- a/renovate.json5
+++ b/renovate.json5
@@ -1,38 +1,4 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
-  extends: ["config:base"],
-  labels: ["renovate"],
-  lockFileMaintenance: {
-    enabled: true,
-    extends: ["schedule:monthly"],
-  },
-  regexManagers: [
-    // TODO: Remove this setting when Renovate supports asdf.
-    // https://github.com/renovatebot/renovate/issues/4051
-    {
-      fileMatch: ["^.tool-versions$"],
-      matchStrings: ["^nodejs (?<currentValue>.*)\\n"],
-      depNameTemplate: "nodejs/node",
-      datasourceTemplate: "github-releases",
-      versioningTemplate: "node",
-    },
-  ],
-  packageRules: [
-    {
-      groupName: "React",
-      groupSlug: "react",
-      matchManagers: ["npm"],
-      matchPackageNames: [
-        "react",
-        "react-dom",
-        "@types/react",
-        "@types/react-dom",
-      ],
-    },
-    {
-      groupName: "npm-non-major",
-      matchManagers: ["npm"],
-      matchUpdateTypes: ["minor", "patch"],
-    },
-  ],
+  extends: ["github>ganta/renovate-config"],
 }
