ci: Improve CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,43 +4,59 @@ on:
   push:
     branches:
       - main
-      - 'renovate/**'
+      - "renovate/**"
+
   pull_request:
 
 jobs:
-  npm-run:
-    name: ${{ matrix.stage }}
+  lint:
+    runs-on: ubuntu-latest
 
-    # The `branches-ignore` in the `pull_request` event does not work due to a bug in GitHub.
-    # So, use `head_ref` to determine the condition of job execution.
-    if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && !startsWith(github.head_ref, 'renovate/')) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    strategy:
-      matrix:
-        stage: [lint, package, build-storybook]
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: .tool-versions
+          cache: npm
 
-    runs-on: ubuntu-20.04
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run lint
+        run: npm run lint
+
+  package:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Read .tool-versions
-        id: tool
-        run: |
-          node_version=$(grep "^nodejs " .tool-versions | awk '{ print $2 }')
-          echo ::set-output name=node-version::${node_version}
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: .tool-versions
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Package extension
+        run: npm run package
+
+  build-storybook:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ steps.tool.outputs.node-version }}
+          node-version-file: .tool-versions
+          cache: npm
 
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm ci
 
-      - run: npm ci
-
-      - run: npm run ${{ matrix.stage }}
+      - name: Build Storybook
+        run: npm run build-storybook
