--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prepackage": "run-s clean build",
     "package": "cd dist && zip -r ../marktone.zip .",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@webscopeio/react-textarea-autocomplete": "4.9.2",
@@ -39,13 +39,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
-    "@storybook/addon-a11y": "6.5.16",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
-    "@storybook/builder-webpack5": "6.5.16",
-    "@storybook/manager-webpack5": "6.5.16",
-    "@storybook/react": "6.5.16",
+    "@storybook/addon-a11y": "7.0.0-beta.46",
+    "@storybook/addon-actions": "7.0.0-beta.46",
+    "@storybook/addon-essentials": "7.0.0-beta.46",
+    "@storybook/addon-links": "7.0.0-beta.46",
+    "@storybook/react": "7.0.0-beta.46",
+    "@storybook/react-vite": "7.0.0-beta.46",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/chrome": "0.0.212",
@@ -75,6 +74,7 @@
     "prettier": "2.8.4",
     "sass": "1.58.0",
     "sass-loader": "13.2.0",
+    "storybook": "7.0.0-beta.46",
     "style-loader": "3.3.1",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
