--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "private": true,
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "start": "webpack --watch",
-    "clean": "rimraf 'dist/*' '*.zip'",
-    "build": "webpack",
-    "check-types": "tsc --noEmit",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix",
-    "prettier": "prettier --check 'src/**/*.{ts,tsx,scss}'",
-    "prettier:fix": "prettier --write 'src/**/*.{ts,tsx,scss}'",
-    "lint": "run-p eslint prettier",
-    "lint:fix": "run-s eslint:fix prettier:fix",
-    "prepackage": "run-s clean build",
-    "package": "cd dist && zip -r ../marktone.zip .",
+    "dev": "vite build --watch",
+    "clean": "rimraf 'dist/' '*.zip'",
+    "build": "tsc && vite build",
+    "typecheck": "tsc --noEmit",
+    "lint": "run-p --print-label 'lint:*'",
+    "lint:eslint": "eslint . --ext .ts,.tsx --max-warnings 0",
+    "lint:prettier": "prettier --check .",
+    "fix": "run-s 'fix:*'",
+    "fix:eslint": "eslint . --ext .ts,.tsx --fix",
+    "fix:prettier": "prettier --write .",
+    "package": "run-s --print-label clean build && tsx scripts/zip.ts marktone.zip dist",
     "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -47,6 +47,7 @@
     "@storybook/react-vite": "7.5.3",
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.1.2",
+    "@types/archiver": "6.0.1",
     "@types/chrome": "0.0.251",
     "@types/dompurify": "3.0.5",
     "@types/jest": "29.5.8",
@@ -56,30 +57,21 @@
     "@types/webscopeio__react-textarea-autocomplete": "4.7.5",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
-    "babel-loader": "9.1.3",
-    "copy-webpack-plugin": "11.0.0",
-    "css-loader": "6.8.1",
-    "eslint": "8.54.0",
+    "archiver": "6.0.1",
+    "eslint": "8.53.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-import-resolver-webpack": "0.13.8",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "extract-loader": "5.1.0",
-    "file-loader": "6.2.0",
     "jest": "29.7.0",
-    "mini-css-extract-plugin": "2.7.6",
     "npm-run-all": "4.1.5",
     "prettier": "3.1.0",
     "sass": "1.69.5",
-    "sass-loader": "13.3.2",
     "storybook": "7.5.3",
-    "style-loader": "3.3.3",
     "ts-jest": "29.1.1",
-    "ts-loader": "9.5.1",
     "ts-node": "10.9.1",
+    "tsx": "4.1.3",
     "typescript": "5.2.2",
-    "webpack": "5.89.0",
-    "webpack-cli": "5.1.4"
+    "vite": "4.5.0"
   }
 }
