--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,58 +5,50 @@ on:
     branches:
       - main
       - "renovate/**"
-
   pull_request:
 
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
           cache: npm
-
       - name: Install dependencies
         run: npm ci
-
       - name: Run lint
         run: npm run lint
 
   package:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
           cache: npm
-
       - name: Install dependencies
         run: npm ci
-
       - name: Package extension
         run: npm run package
 
   build-storybook:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
           cache: npm
-
       - name: Install dependencies
         run: npm ci
-
       - name: Build Storybook
         run: npm run build-storybook
