--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.24.3",
+    "@biomejs/biome": "1.9.3",
     "@storybook/addon-a11y": "8.0.5",
     "@storybook/addon-actions": "8.0.5",
     "@storybook/addon-essentials": "8.0.5",
