chore: replace the script to Biome from ESLint

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "tsc && vite build",
     "typecheck": "tsc --noEmit",
     "lint": "run-p --print-label 'lint:*'",
-    "lint:eslint": "eslint . --ext .ts,.tsx --max-warnings 0",
+    "lint:biome": "biome check",
     "lint:prettier": "prettier --check .",
     "fix": "run-s 'fix:*'",
-    "fix:eslint": "eslint . --ext .ts,.tsx --fix",
+    "fix:biome": "biome check --write",
     "fix:prettier": "prettier --write .",
     "package": "run-s --print-label clean build && tsx scripts/zip.ts marktone.zip dist",
     "test": "jest",
