--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "18.2.23",
     "@types/styled-components": "5.1.34",
     "@types/webscopeio__react-textarea-autocomplete": "4.7.5",
+    "@vitejs/plugin-react-swc": "3.7.1",
     "archiver": "7.0.1",
     "jest": "29.7.0",
     "npm-run-all2": "5.0.2",
