--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fix:biome": "biome check --write",
     "fix:prettier": "prettier --write .",
     "package": "run-s --print-label clean build && tsx scripts/zip.ts marktone.zip dist",
-    "test": "jest",
+    "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -48,25 +48,24 @@
     "@storybook/react-vite": "8.3.5",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
     "@types/archiver": "6.0.2",
     "@types/chrome": "0.0.278",
     "@types/dompurify": "3.0.5",
-    "@types/jest": "29.5.13",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@types/styled-components": "5.1.34",
     "@types/webscopeio__react-textarea-autocomplete": "4.7.5",
     "@vitejs/plugin-react-swc": "3.7.1",
     "archiver": "7.0.1",
-    "jest": "29.7.0",
+    "jsdom": "25.0.1",
     "npm-run-all2": "6.2.3",
     "prettier": "3.3.3",
     "sass": "1.79.5",
     "storybook": "8.3.5",
-    "ts-jest": "29.2.5",
-    "ts-node": "10.9.2",
     "tsx": "4.19.1",
     "typescript": "5.6.3",
-    "vite": "5.4.9"
+    "vite": "5.4.9",
+    "vitest": "2.1.3"
   }
 }
