--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "archiver": "7.0.1",
     "jsdom": "25.0.1",
     "npm-run-all2": "6.2.3",
+    "playwright": "1.48.0",
     "prettier": "3.3.3",
     "sass": "1.79.5",
     "storybook": "8.3.5",
     "tsx": "4.19.1",
     "typescript": "5.6.3",
     "vite": "5.4.9",
-    "vitest": "2.1.3"
+    "vitest": "2.1.3",
+    "vitest-browser-react": "0.0.1"
   }
 }
