--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@vanilla-extract/css": "1.16.0",
     "@webscopeio/react-textarea-autocomplete": "4.9.2",
     "dompurify": "3.1.7",
     "gemoji": "8.1.0",
