--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-dom": "18.3.1",
     "@types/styled-components": "5.1.34",
     "@types/webscopeio__react-textarea-autocomplete": "4.7.5",
+    "@vanilla-extract/vite-plugin": "4.0.17",
     "@vitejs/plugin-react-swc": "3.7.1",
     "archiver": "7.0.1",
     "jsdom": "25.0.1",
