--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@vanilla-extract/vite-plugin": "4.0.17",
     "@vitejs/plugin-react-swc": "3.7.1",
     "archiver": "7.0.1",
+    "chromatic": "11.18.0",
     "jsdom": "25.0.1",
     "npm-run-all2": "7.0.1",
     "prettier": "3.3.3",
