--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@biomejs/biome": "1.9.4",
+    "@chromatic-com/storybook": "3.2.2",
     "@storybook/addon-a11y": "8.4.2",
     "@storybook/addon-actions": "8.4.2",
     "@storybook/addon-essentials": "8.4.2",
