--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "highlight.js": "11.10.0",
     "marked": "15.0.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
