refactor: pass the Cybozu data via `CustomeEvent`

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
   "permissions": ["storage"],
   "web_accessible_resources": [
     {
-      "resources": ["content.js", "assets/*", "js/initialization.js"],
+      "resources": ["content.js", "assets/*", "js/passCybozuData.js"],
       "matches": ["<all_urls>"]
     }
   ],
