--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "license": "MIT",
   "type": "module",
+  "packageManager": "pnpm@10.17.0",
   "scripts": {
     "dev": "vite build --watch",
     "clean": "tsx scripts/rm.ts dist/ *.zip",
